--- a/app/src/main/res/layout/activity_lista_eventi.xml
+++ b/app/src/main/res/layout/activity_lista_eventi.xml
@@ -11,12 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Lista eventi"
-        android:textSize="30dp"/>
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"/>
 
     <ListView
         android:id="@+id/eventListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:background="@color/white"
+        android:divider="#F1F1F1"
+        android:dividerHeight="20dp"/>
 
 </LinearLayout>
