--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -15,6 +15,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="20dp"
+            android:src="@drawable/check"
+            app:layout_constraintBottom_toBottomOf="@+id/testoCentrato"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.669"
+            app:layout_constraintStart_toEndOf="@+id/testoCentrato"
+            app:layout_constraintTop_toTopOf="@+id/testoCentrato" />
+
         <TextView
             android:id="@+id/testoCentrato"
             android:layout_width="wrap_content"
@@ -30,18 +43,19 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.5" />
 
+
         <!-- Contenuto del ConstraintLayout -->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="342dp"
+        android:layout_height="816dp"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
 
@@ -75,7 +89,8 @@
             android:id="@+id/cateogry"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="60dp"
+            android:minHeight="48dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/EventPhoto" />
@@ -138,105 +153,118 @@
                 android:layout_width="match_parent"
                 android:layout_height="77dp"
                 android:maxLength="100" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-            <LinearLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="match_parent"
+
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:backgroundTint="@color/grey"
+            android:padding="5dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:hint="Location"
+            app:layout_constraintTop_toBottomOf="@+id/EventDescriptionLayout"
+            tools:layout_editor_absoluteX="20dp">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight=".5"
+                android:layout_height="50dp"
+                android:layout_gravity="center_vertical"
+                android:padding="5dp"
+                android:src="@drawable/location_event"
+                app:layout_constraintBottom_toBottomOf="@+id/date"
+                app:layout_constraintEnd_toStartOf="@+id/date"
+                app:layout_constraintTop_toTopOf="@+id/date" />
+
+            <AutoCompleteTextView
+                android:id="@+id/autoCompleteTextView"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_marginEnd="10dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
-                android:hint="Location"
+                android:layout_gravity="center_vertical"
+                android:completionThreshold="1"
+                android:hint="Comune"
+                android:minHeight="48dp"
+                android:required="true" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_marginStart="10dp"
+                android:id="@+id/EventAddressLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                android:hint="Address"
+                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/surnameLayout">
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+                app:layout_constraintVertical_bias="0.0">
 
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center_vertical"
-                    android:padding="5dp"
-                    android:src="@drawable/location_event"
-                    app:layout_constraintBottom_toBottomOf="@+id/date"
-                    app:layout_constraintEnd_toStartOf="@+id/date"
-                    app:layout_constraintTop_toTopOf="@+id/date" />
-
-                <AutoCompleteTextView
-                    android:id="@+id/autoCompleteTextView"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/EventAddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:completionThreshold="1"
-                    android:hint="Cerca il tuo comune"
-                    android:minHeight="48dp"
+                    android:maxLength="20"
                     android:required="true" />
 
-            </LinearLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <LinearLayout
-                android:id="@+id/linearLayout2"
-                android:layout_width="match_parent"
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            app:layout_constraintVertical_bias="0.13"
+            tools:layout_editor_absoluteX="0dp">
+
+            <Button
+                android:id="@+id/date"
+                style="@android:style/Widget.Holo.Button"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/EventDescriptionLayout">
+                android:layout_margin="2dp"
+                android:layout_marginStart="72dp"
+                android:layout_marginTop="68dp"
+                android:layout_weight="1"
+                android:text="date"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/EventDescriptionLayout" />
 
-                <Button
-                    android:id="@+id/date"
-                    style="@android:style/Widget.Holo.Button"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:layout_marginStart="72dp"
-                    android:layout_marginTop="68dp"
-                    android:layout_weight="1"
-                    android:text="date"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/EventDescriptionLayout" />
+            <Button
+                android:id="@+id/hour"
+                style="@android:style/Widget.Holo.Button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:layout_marginTop="48dp"
+                android:layout_marginEnd="44dp"
+                android:layout_weight="1"
+                android:text="hour"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/EventDescriptionLayout" />
 
-                <Button
-                    android:id="@+id/hour"
-                    style="@android:style/Widget.Holo.Button"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:layout_marginTop="48dp"
-                    android:layout_marginEnd="44dp"
-                    android:layout_weight="1"
-                    android:text="hour"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/EventDescriptionLayout" />
-
-            </LinearLayout>
-
-
-        </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Categoria"
-            app:layout_constraintBottom_toTopOf="@+id/cateogry"
             android:textColor="@color/principal"
+            app:layout_constraintBottom_toTopOf="@+id/cateogry"
             app:layout_constraintStart_toStartOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <Button
-        android:id="@+id/addEvent"
-        style="@style/Widget.Material3.Button.ElevatedButton"
-        android:layout_width="295dp"
-        android:layout_height="62dp"
-        android:layout_marginBottom="60dp"
-        android:elevation="20dp"
-        android:text="Add Event"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
