--- a/app/src/main/res/layout/activity_view_event.xml
+++ b/app/src/main/res/layout/activity_view_event.xml
@@ -74,15 +74,13 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:cardElevation="10dp"
-                app:cardBackgroundColor="@color/grey">
+                app:cardBackgroundColor="@color/white">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="10dp"
-                    android:layout_margin="1dp"
-                    android:background="@color/white">
+                    android:layout_margin="5dp">
 
                     <LinearLayout
                         android:id="@+id/l1"
@@ -157,6 +155,12 @@
                     </androidx.cardview.widget.CardView>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
+                <View
+                    android:id="@+id/divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="?android:attr/listDivider" />
+
             </androidx.cardview.widget.CardView>
             <TextView
                 android:id="@+id/textView14"
@@ -226,7 +230,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/p_1" />
+                app:srcCompat="@drawable/p_1"
+                android:elevation="20dp"/>
 
 
             </androidx.cardview.widget.CardView>
@@ -234,22 +239,26 @@
 
             <ImageView
                 android:id="@+id/arrow"
-                android:layout_width="25dp"
+                android:layout_width="40dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/arrow" />
+                app:srcCompat="@drawable/arrow"
+                android:elevation="20dp"/>
 
             <ImageView
                 android:id="@+id/heart"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_marginEnd="10dp"
+                android:elevation="20dp"
+                android:padding="5dp"
                 app:layout_constraintBottom_toBottomOf="@+id/arrow"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/arrow"
-                app:srcCompat="@drawable/heart_animation"/>
+                app:srcCompat="@drawable/heart_animation" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
