--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -150,6 +150,7 @@
                 app:tint="@color/principal"
                 android:layout_gravity="center"/>
             <TextView
+                android:id="@+id/myEventsTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
