--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -87,6 +87,7 @@
             android:layout_weight="0.6">
 
             <ListView
+                android:id="@+id/profileListView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             </ListView>
