--- a/app/src/main/res/layout/activity_view_event.xml
+++ b/app/src/main/res/layout/activity_view_event.xml
@@ -137,6 +137,7 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/layoutTastoIscrizione"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:background="@color/green">
@@ -145,7 +146,6 @@
                                 android:id="@+id/imageView6"
                                 android:layout_width="30dp"
                                 android:layout_height="30dp"
-                                android:src="@drawable/check"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
