--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -99,6 +99,20 @@
         tools:ignore="MissingConstraints,VisualLintBounds"
         tools:layout_editor_absoluteY="-3dp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roadrage"
+            android:padding="5dp"
+            android:text="Profile"
+            android:textColor="@color/white"
+            android:textSize="50dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.244" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
