--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -76,7 +76,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:text="Eboli , Salerno"
+                android:text=""
                 android:textColor="@color/white"
                 android:textSize="10sp"
                 android:textStyle="bold"
@@ -116,6 +116,7 @@
                     android:orientation="horizontal">
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/cardConcerti"
                         android:layout_width="149dp"
                         android:layout_height="100dp"
                         android:layout_marginEnd="20dp"
@@ -128,6 +129,7 @@
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/cardParty"
                         android:layout_width="149dp"
                         android:layout_height="100dp"
                         android:layout_marginEnd="20dp"
@@ -140,6 +142,7 @@
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/cardFood"
                         android:layout_width="149dp"
                         android:layout_height="100dp"
                         android:layout_marginEnd="20dp"
@@ -152,6 +155,7 @@
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/cardRaduni"
                         android:layout_width="149dp"
                         android:layout_height="100dp"
                         android:layout_marginEnd="20dp"
@@ -164,6 +168,7 @@
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/cardNature"
                         android:layout_width="149dp"
                         android:layout_height="100dp"
                         android:layout_marginEnd="20dp"
@@ -176,6 +181,7 @@
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/cardCultura"
                         android:layout_width="149dp"
                         android:layout_height="100dp"
                         android:layout_marginEnd="20dp"
