--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="principal">#6250C6</color>
     <color name="grey">#BCBCBC</color>
     <color name="green">#2DCA7E</color>
+    <color name="red">#FF0000</color>
 </resources>
