--- a/app/src/main/res/layout/prenotation_dialog.xml
+++ b/app/src/main/res/layout/prenotation_dialog.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/roadrage"
             android:padding="5dp"
-            android:text="PRENOTATO"
+            android:text="ISCRITTO"
             android:textColor="@color/white"
             android:textSize="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
